--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,121 @@
+/*Accodion Tabs*/
+* {
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+}
+
+header {
+  align-items: center;
+  background-color: #2F2235;
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  padding: 10px;
+}
+
 h1 {
-  color: red;
+  color: #FFF;
+  font-size: 1.5em;
+  font-weight: normal;
+}
+
+h1 span {
+  color: #33D1D1;
+}
+
+h3 {
+  color: #FFF;
+}
+
+hr {
+  margin-bottom: 40px;
+}
+
+.accordion-wrapper {
+  margin: 0 auto;
+  width: 800px;
+}
+
+.tab-wrapper {
+  align-items: center;
+  background-color: #F2F2F2;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+}
+
+.tab {
+  align-items: center;
+  border: 1px solid #FFF;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  width: 25%;
+}
+
+.tab-active {
+  background-color: #FFF;
+  border: 1px solid #F2F2F2;
+  border-bottom: none;
+  font-weight: bold;
+}
+
+.accordion-img {
+  height: 300px;
+}
+
+.content-wrapper {
+  position:relative;
+}
+
+.content-wrapper:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.section-body {
+  display: flex;
+  border: 1px solid #F2F2F2;
+  border-top: none;
+  height: 350px;
+  padding: 25px;
+}
+
+.hidden {
+  display: none;
+}
+
+.accordion-text-content {
+  margin-left: 15px;
+  padding: 10px;
+}
+
+.accordion-text-content h4 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.accordion-text-content p {
+  margin-bottom: 10px;
+}
+
+.accordion-text-content hr {
+  border: 1px solid #F2F2F2;
+  margin: 10px 0;
+}
+
+.view-code {
+  background-color: #322836;
+  border: none;
+  color: #FFF;
+  display: block;
+  height: 30px;
+  margin: 50px auto;
+  text-align: center;
+  width: 200px;
 }
